2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Clean up based on pychecker's findings.
	  This fixes an actual bug in the temporary file creation,
	  and removes chunks of either half-implemented code or
	  changed-but-not-cleaned-up code.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	  Add a note on pychecker use.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/worker/checks/gst010.py:
	  Remove unused import.

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/monitor/nagios/stream.py:
	  Fix obviously unneeded search-and-replace of quotes introduced
	  in [7822].

2009-05-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide:
	  Make Public vs Private explicit, since the API section clearly
	  mentions public and private but fails to explain what it means.

2009-05-21  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Zaheer

	* flumotion/component/feedcomponent010.py:
	Added a force flag to the try_start_pipepline to force setting
	pipeline to PLAYING.
	* flumotion/component/producers/icecast/icecast.py:
	Implemented a reconnect mechanism for the icecast producer component.
	#1298 * flumotion/twisted/defer.py:
	Reset delay value when starting a RetryingDeferred.

2009-05-21  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/scenario/live/live.xml:
	* flumotion/scenario/ondemand/ondemand.xml:
	  The descriptions are used in the scenario selection step, so the
	  verbs should be imperative.

2009-05-21  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: arek

	* flumotion/admin/gtk/adminwindow.py (_appendComponent):
	Fix a typo that caused the trayicon not being updated with the correct
	mood when adding the components incrementally.

2009-05-21  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
